Landing page updated

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <h3 class="cover-letter-text">Next Link Systems</h3>
                 </div>
                 <div class="slogan">
-                    <p>Soluciones modulares y limpias que maximizan tus conversiones y mejoran la experiencia de usuario.</p>
+                    <p>Power your campaigns and turn more ad clicks into customers with personalized landing pages that are easy to build, deploy, optimize, and scale — all in one place.</p>
                 </div>
                 <div class="demos">
                     <div class="options-demo">
