--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                     <h3 class="cover-letter-text">Next Link Systems</h3>
                 </div>
                 <div class="slogan">
-                    <p>Power your campaigns and turn more ad clicks into customers with personalized landing pages that are easy to build, deploy, optimize, and scale — all in one place.</p>
+                    <p>Power your campaigns and turn more ad clicks into customers with personalized landing pages that
+                        are easy to build, deploy, optimize, and scale — all in one place.</p>
                 </div>
                 <div class="demos">
                     <div class="options-demo">
@@ -94,12 +95,13 @@
             </div>
             <div class="row min-cards">
                 <div class="cards-demo">
-                    <div class="col">
+                    <div class="col project-card">
                         <div class="card">
                             <img src="./src/img/1.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">E-Commerce Premiun</h5>
-                                <p class="card-text">Plataforma de comercio electrónico con integración de pagos y gestión de inventario.</p>
+                                <p class="card-text">Plataforma de comercio electrónico con integración de pagos y
+                                    gestión de inventario.</p>
                                 <div class="pill_badges">
                                     <div class="pill">
                                         <p class="pill-text">Next.js</p>
@@ -119,18 +121,19 @@
                                 </div>
                                 <a href="#" class="btn-view">
                                     <span class="inside-text">
-                                        Ver proyecto <i class='bx  bx-arrow-out-up-right-square'  ></i>
+                                        Ver proyecto <i class='bx  bx-arrow-out-up-right-square'></i>
                                     </span>
                                 </a>
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col project-card">
                         <div class="card">
                             <img src="./src/img/2.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Enterprise Management App</h5>
-                                <p class="card-text">Sistema integral para la gestión de recursos y proyectos empresariales.</p>
+                                <p class="card-text">Sistema integral para la gestión de recursos y proyectos
+                                    empresariales.</p>
                                 <div class="pill_badges">
                                     <div class="pill">
                                         <p class="pill-text">Vue js</p>
@@ -150,18 +153,19 @@
                                 </div>
                                 <a href="#" class="btn-view">
                                     <span class="inside-text">
-                                        Ver proyecto <i class='bx  bx-arrow-out-up-right-square'  ></i>
+                                        Ver proyecto <i class='bx  bx-arrow-out-up-right-square'></i>
                                     </span>
                                 </a>
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col project-card">
                         <div class="card">
                             <img src="./src/img/3.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Personal Plataforms</h5>
-                                <p class="card-text">Sistema de aprendizaje en línea con cursos interactivos y seguimiento de progreso.</p>
+                                <p class="card-text">Sistema de aprendizaje en línea con cursos interactivos y
+                                    seguimiento de progreso.</p>
                                 <div class="pill_badges">
                                     <div class="pill">
                                         <p class="pill-text">React</p>
@@ -181,7 +185,7 @@
                                 </div>
                                 <a href="#" class="btn-view">
                                     <span class="inside-text">
-                                        Ver proyecto <i class='bx  bx-arrow-out-up-right-square'  ></i>
+                                        Ver proyecto <i class='bx  bx-arrow-out-up-right-square'></i>
                                     </span>
                                 </a>
                             </div>
@@ -194,6 +198,74 @@
             </div>
         </div>
     </div>
+
+    <div class="container">
+        <div class="portfolio-content">
+            <h1 class="portfolio-header">Services</h1>
+            <p class="portfolio-text">Descubre algunos de nuestros proyectos más destacados y las soluciones que
+                hemos <br>
+                desarrollado para nuestros clientes.</p>
+        </div>
+        <div class="card-services">
+            <div class="row services">
+                <div class="col-services">
+                    <div class="card">
+                        <div class="card-body" id="service-icon">
+                            <i class='bx bx-globe-alt'></i>
+                            <h2 class="services-title">Web Design</h2>
+                            <p class="service-text">Creamos sitios web y aplicaciones web personalizadas, optimizadas para rendimiento y experiencia de usuario.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-services">
+                    <div class="card">
+                        <div class="card-body" id="service-icon">
+                            <i class='bx  bx-mobile'  ></i> 
+                            <h2 class="services-title">Mobile App</h2>
+                            <p class="service-text">Creamos sitios web y aplicaciones web personalizadas, optimizadas para rendimiento y experiencia de usuario.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-services">
+                    <div class="card">
+                        <div class="card-body" id="service-icon">
+                            <i class='bx  bx-code-alt'  ></i> 
+                            <h2 class="services-title">Back End Development</h2>
+                            <p class="service-text">Creamos sitios web y aplicaciones web personalizadas, optimizadas para rendimiento y experiencia de usuario.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-services">
+                    <div class="card">
+                        <div class="card-body" id="service-icon">
+                            <i class='bx  bx-chart-line'  ></i> 
+                            <h2 class="services-title">Web Design</h2>
+                            <p class="service-text">Creamos sitios web y aplicaciones web personalizadas, optimizadas para rendimiento y experiencia de usuario.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-services">
+                    <div class="card">
+                        <div class="card-body" id="service-icon">
+                            <i class='bx  bx-light-bulb-alt'  ></i> 
+                            <h2 class="services-title">Web Design</h2>
+                            <p class="service-text">Creamos sitios web y aplicaciones web personalizadas, optimizadas para rendimiento y experiencia de usuario.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-services">
+                    <div class="card">
+                        <div class="card-body" id="service-icon">
+                            <i class='bx  bx-gear'  ></i> 
+                            <h2 class="services-title">Web Design</h2>
+                            <p class="service-text">Creamos sitios web y aplicaciones web personalizadas, optimizadas para rendimiento y experiencia de usuario.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
