Services and team

--- a/index.html
+++ b/index.html
@@ -199,66 +199,74 @@
         </div>
     </div>
 
-    <div class="container">
-        <div class="portfolio-content">
-            <h1 class="portfolio-header">Services</h1>
-            <p class="portfolio-text">Descubre algunos de nuestros proyectos más destacados y las soluciones que
-                hemos <br>
-                desarrollado para nuestros clientes.</p>
-        </div>
-        <div class="card-services">
-            <div class="row services">
-                <div class="col-services">
-                    <div class="card">
-                        <div class="card-body" id="service-icon">
-                            <i class='bx bx-globe-alt'></i>
-                            <h2 class="services-title">Web Design</h2>
-                            <p class="service-text">Creamos sitios web y aplicaciones web personalizadas, optimizadas para rendimiento y experiencia de usuario.</p>
+    <div class="content-service">
+        <div class="container">
+            <div class="portfolio-content">
+                <h1 class="portfolio-header">Services</h1>
+                <p class="portfolio-text">Descubre algunos de nuestros proyectos más destacados y las soluciones que
+                    hemos <br>
+                    desarrollado para nuestros clientes.</p>
+            </div>
+            <div class="card-services">
+                <div class="row services">
+                    <div class="col-services">
+                        <div class="card">
+                            <div class="card-body" id="service-icon">
+                                <i class='bx bx-globe-alt'></i>
+                                <h2 class="services-title">Web Design</h2>
+                                <p class="service-text">Creamos sitios web y aplicaciones web personalizadas,
+                                    optimizadas para rendimiento y experiencia de usuario.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-services">
-                    <div class="card">
-                        <div class="card-body" id="service-icon">
-                            <i class='bx  bx-mobile'  ></i> 
-                            <h2 class="services-title">Mobile App</h2>
-                            <p class="service-text">Creamos sitios web y aplicaciones web personalizadas, optimizadas para rendimiento y experiencia de usuario.</p>
+                    <div class="col-services">
+                        <div class="card">
+                            <div class="card-body" id="service-icon">
+                                <i class='bx  bx-mobile'></i>
+                                <h2 class="services-title">Mobile App</h2>
+                                <p class="service-text">Creamos sitios web y aplicaciones web personalizadas,
+                                    optimizadas para rendimiento y experiencia de usuario.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-services">
-                    <div class="card">
-                        <div class="card-body" id="service-icon">
-                            <i class='bx  bx-code-alt'  ></i> 
-                            <h2 class="services-title">Back End Development</h2>
-                            <p class="service-text">Creamos sitios web y aplicaciones web personalizadas, optimizadas para rendimiento y experiencia de usuario.</p>
+                    <div class="col-services">
+                        <div class="card">
+                            <div class="card-body" id="service-icon">
+                                <i class='bx  bx-code-alt'></i>
+                                <h2 class="services-title">Back End Development</h2>
+                                <p class="service-text">Creamos sitios web y aplicaciones web personalizadas,
+                                    optimizadas para rendimiento y experiencia de usuario.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-services">
-                    <div class="card">
-                        <div class="card-body" id="service-icon">
-                            <i class='bx  bx-chart-line'  ></i> 
-                            <h2 class="services-title">Web Design</h2>
-                            <p class="service-text">Creamos sitios web y aplicaciones web personalizadas, optimizadas para rendimiento y experiencia de usuario.</p>
+                    <div class="col-services">
+                        <div class="card">
+                            <div class="card-body" id="service-icon">
+                                <i class='bx  bx-chart-line'></i>
+                                <h2 class="services-title">Analítica y SEO</h2>
+                                <p class="service-text">Creamos sitios web y aplicaciones web personalizadas,
+                                    optimizadas para rendimiento y experiencia de usuario.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-services">
-                    <div class="card">
-                        <div class="card-body" id="service-icon">
-                            <i class='bx  bx-light-bulb-alt'  ></i> 
-                            <h2 class="services-title">Web Design</h2>
-                            <p class="service-text">Creamos sitios web y aplicaciones web personalizadas, optimizadas para rendimiento y experiencia de usuario.</p>
+                    <div class="col-services">
+                        <div class="card">
+                            <div class="card-body" id="service-icon">
+                                <i class='bx  bx-light-bulb-alt'></i>
+                                <h2 class="services-title">Consultoría Tecnológica</h2>
+                                <p class="service-text">Creamos sitios web y aplicaciones web personalizadas,
+                                    optimizadas para rendimiento y experiencia de usuario.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-services">
-                    <div class="card">
-                        <div class="card-body" id="service-icon">
-                            <i class='bx  bx-gear'  ></i> 
-                            <h2 class="services-title">Web Design</h2>
-                            <p class="service-text">Creamos sitios web y aplicaciones web personalizadas, optimizadas para rendimiento y experiencia de usuario.</p>
+                    <div class="col-services">
+                        <div class="card">
+                            <div class="card-body" id="service-icon">
+                                <i class='bx  bx-gear'></i>
+                                <h2 class="services-title">Mantenimiento y Soporte</h2>
+                                <p class="service-text">Creamos sitios web y aplicaciones web personalizadas,
+                                    optimizadas para rendimiento y experiencia de usuario.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -266,6 +274,60 @@
         </div>
     </div>
 
+    <div class="our-team">
+        <div class="container container-team">
+            <div class="portfolio-content">
+                <h1 class="portfolio-header">Our Team</h1>
+                <p class="portfolio-text">Conoce a los profesionales detrás de nuestras soluciones tecnológicas.</p>
+            </div>
+
+            <div class="row">
+                <div class="team">
+                    <div class="col-team">
+                        <div class="card">
+                            <img src="https://media.istockphoto.com/id/1337144146/vector/default-avatar-profile-icon-vector.jpg?s=612x612&w=0&k=20&c=BIbFwuv7FxTWvh5S3vB6bkT0Qv8Vn8N5Ffseq84ClGI=" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h2 class="team-title">Nelson Almendares</h2>
+                                <h4 class="team-software">Desarrollador Full Stack</h4>
+                                <p class="team-text">Some quick example text to build on the card title and make up the</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-team">
+                        <div class="card">
+                            <img src="https://media.istockphoto.com/id/1337144146/vector/default-avatar-profile-icon-vector.jpg?s=612x612&w=0&k=20&c=BIbFwuv7FxTWvh5S3vB6bkT0Qv8Vn8N5Ffseq84ClGI=" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h2 class="team-title">Rossman</h2>
+                                <h4 class="team-software">Desarrollador Full Stack</h4>
+                                <p class="team-text">Some quick example text to build on the card title and make up the</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-team">
+                        <div class="card">
+                            <img src="https://media.istockphoto.com/id/1337144146/vector/default-avatar-profile-icon-vector.jpg?s=612x612&w=0&k=20&c=BIbFwuv7FxTWvh5S3vB6bkT0Qv8Vn8N5Ffseq84ClGI=" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h2 class="team-title">Alex</h2>
+                                <h4 class="team-software">Desarrollador Full Stack</h4>
+                                <p class="team-text">Some quick example text to build on the card title and make up the</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-team">
+                        <div class="card">
+                            <img src="https://media.istockphoto.com/id/1337144146/vector/default-avatar-profile-icon-vector.jpg?s=612x612&w=0&k=20&c=BIbFwuv7FxTWvh5S3vB6bkT0Qv8Vn8N5Ffseq84ClGI=" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h2 class="team-title">Jefferson</h2>
+                                <h4 class="team-software">Desarrollador Full Stack</h4>
+                                <p class="team-text">Some quick example text to build on the card title and make up the</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
