--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/effects.css">
     <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -285,41 +286,149 @@
                 <div class="team">
                     <div class="col-team">
                         <div class="card">
-                            <img src="https://media.istockphoto.com/id/1337144146/vector/default-avatar-profile-icon-vector.jpg?s=612x612&w=0&k=20&c=BIbFwuv7FxTWvh5S3vB6bkT0Qv8Vn8N5Ffseq84ClGI=" class="card-img-top" alt="...">
+                            <img src="./src/img/placeholder.svg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h2 class="team-title">Nelson Almendares</h2>
                                 <h4 class="team-software">Desarrollador Full Stack</h4>
-                                <p class="team-text">Some quick example text to build on the card title and make up the</p>
+                                <p class="team-text">Especialista en React y diseño de interfaces de usuario con 5 años de experiencia.</p>
+                                <p class="team-text fw-bold mt-2">Habilidades: </p>
+                                <div class="pill_badges">
+                                    <div class="pill-team">
+                                        <p class="pill-text-team">React</p>
+                                    </div>
+                                    <div class="pill-team">
+                                        <p class="pill-text-team">SQL</p>
+                                    </div>
+                                    <div class="pill-team">
+                                        <p class="pill-text-team">Linux</p>
+                                    </div>
+                                    <div class="pill-team">
+                                        <p class="pill-text-team">Docker</p>
+                                    </div>
+                                    <div class="pill-team">
+                                        <p class="pill-text-team">Bootrsrtap</p>
+                                    </div>
+                                </div>
+                                <div class="links-social">
+                                    <div class="row">
+                                        <div class="links-social-icons">
+                                            <i class="bi bi-github"></i>
+                                            <i class="bi bi-linkedin"></i>
+                                            <i class="bi bi-twitter-x"></i>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-team">
                         <div class="card">
-                            <img src="https://media.istockphoto.com/id/1337144146/vector/default-avatar-profile-icon-vector.jpg?s=612x612&w=0&k=20&c=BIbFwuv7FxTWvh5S3vB6bkT0Qv8Vn8N5Ffseq84ClGI=" class="card-img-top" alt="...">
+                            <img src="./src/img/placeholder.svg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h2 class="team-title">Rossman</h2>
                                 <h4 class="team-software">Desarrollador Full Stack</h4>
-                                <p class="team-text">Some quick example text to build on the card title and make up the</p>
+                                <p class="team-text">Experto en arquitectura de sistemas y bases de datos con enfoque en rendimiento.</p>
+                                <p class="team-text fw-bold mt-2">Habilidades: </p>
+                                <div class="pill_badges">
+                                    <div class="pill-team">
+                                        <p class="pill-text-team">React</p>
+                                    </div>
+                                    <div class="pill-team">
+                                        <p class="pill-text-team">SQL</p>
+                                    </div>
+                                    <div class="pill-team">
+                                        <p class="pill-text-team">Linux</p>
+                                    </div>
+                                    <div class="pill-team">
+                                        <p class="pill-text-team">Docker</p>
+                                    </div>
+                                    <div class="pill-team">
+                                        <p class="pill-text-team">Bootrsrtap</p>
+                                    </div>
+                                </div>
+                                <div class="links-social">
+                                    <div class="row">
+                                        <div class="links-social-icons">
+                                            <i class="bi bi-github"></i>
+                                            <i class="bi bi-linkedin"></i>
+                                            <i class="bi bi-twitter-x"></i>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-team">
                         <div class="card">
-                            <img src="https://media.istockphoto.com/id/1337144146/vector/default-avatar-profile-icon-vector.jpg?s=612x612&w=0&k=20&c=BIbFwuv7FxTWvh5S3vB6bkT0Qv8Vn8N5Ffseq84ClGI=" class="card-img-top" alt="...">
+                            <img src="./src/img/placeholder.svg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h2 class="team-title">Alex</h2>
+                                <h2 class="team-title">Alexander Valdez</h2>
                                 <h4 class="team-software">Desarrollador Full Stack</h4>
-                                <p class="team-text">Some quick example text to build on the card title and make up the</p>
+                                <p class="team-text">Experto en arquitectura de sistemas y bases de datos con enfoque en rendimiento.</p>
+                                <p class="team-text fw-bold mt-2">Habilidades: </p>
+                                <div class="pill_badges">
+                                    <div class="pill-team">
+                                        <p class="pill-text-team">React</p>
+                                    </div>
+                                    <div class="pill-team">
+                                        <p class="pill-text-team">SQL</p>
+                                    </div>
+                                    <div class="pill-team">
+                                        <p class="pill-text-team">Linux</p>
+                                    </div>
+                                    <div class="pill-team">
+                                        <p class="pill-text-team">Docker</p>
+                                    </div>
+                                    <div class="pill-team">
+                                        <p class="pill-text-team">Bootrsrtap</p>
+                                    </div>
+                                </div>
+                                <div class="links-social">
+                                    <div class="row">
+                                        <div class="links-social-icons">
+                                            <i class="bi bi-github"></i>
+                                            <i class="bi bi-linkedin"></i>
+                                            <i class="bi bi-twitter-x"></i>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-team">
                         <div class="card">
-                            <img src="https://media.istockphoto.com/id/1337144146/vector/default-avatar-profile-icon-vector.jpg?s=612x612&w=0&k=20&c=BIbFwuv7FxTWvh5S3vB6bkT0Qv8Vn8N5Ffseq84ClGI=" class="card-img-top" alt="...">
+                            <img src="./src/img/placeholder.svg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h2 class="team-title">Jefferson</h2>
                                 <h4 class="team-software">Desarrollador Full Stack</h4>
-                                <p class="team-text">Some quick example text to build on the card title and make up the</p>
+                                <p class="team-text">Creador de experiencias digitales centradas en el usuario y la accesibilidad.</p>
+                                <p class="team-text fw-bold mt-2">Habilidades: </p>
+                                <div class="pill_badges">
+                                    <div class="pill-team">
+                                        <p class="pill-text-team">React</p>
+                                    </div>
+                                    <div class="pill-team">
+                                        <p class="pill-text-team">SQL</p>
+                                    </div>
+                                    <div class="pill-team">
+                                        <p class="pill-text-team">Linux</p>
+                                    </div>
+                                    <div class="pill-team">
+                                        <p class="pill-text-team">Docker</p>
+                                    </div>
+                                    <div class="pill-team">
+                                        <p class="pill-text-team">Bootrsrtap</p>
+                                    </div>
+                                </div>
+                                <div class="links-social">
+                                    <div class="row">
+                                        <div class="links-social-icons">
+                                            <i class="bi bi-github"></i>
+                                            <i class="bi bi-linkedin"></i>
+                                            <i class="bi bi-twitter-x"></i>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
