--- a/index.html
+++ b/index.html
@@ -523,55 +523,56 @@
                 <!-- Logo y descripción -->
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                     <h5 class="text-uppercase mb-4 font-weight-bold">
-                        <img src="logo.png" alt="DevSolutions" width="40" class="me-2">
-                        DevSolutions
+                        <img src="./src/img/logo.png" alt="NextLink Systems" width="150" class="me-2">
                     </h5>
-                    <p>Creamos soluciones tecnológicas innovadoras que impulsan el crecimiento de tu negocio en el mundo
+                    <p class="text-footer">Creamos soluciones tecnológicas innovadoras que impulsan el crecimiento de tu negocio en el mundo
                         digital.</p>
                     <div class="mt-3">
-                        <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="text-dark me-3"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="text-dark me-3"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="text-dark"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#" class="text-dark text-item-footer me-3"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="text-dark text-item-footer me-3"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" class="text-dark text-item-footer me-3"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="text-dark text-item-footer"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
 
                 <!-- Navegación -->
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h6 class="text-uppercase fw-bold mb-4">Navegación</h6>
-                    <p><a href="#" class="text-dark">Inicio</a></p>
-                    <p><a href="#" class="text-dark">Portafolio</a></p>
-                    <p><a href="#" class="text-dark">Servicios</a></p>
-                    <p><a href="#" class="text-dark">Equipo</a></p>
-                    <p><a href="#" class="text-dark">Contacto</a></p>
+                    <h6 class="fw-bold mb-2 title-footer">Navegación</h6>
+                    <p class="mb-1"><a href="#" class="text-dark text-item-footer">Inicio</a></p>
+                    <p class="mb-1"><a href="#" class="text-dark text-item-footer">Portafolio</a></p>
+                    <p class="mb-1"><a href="#" class="text-dark text-item-footer">Servicios</a></p>
+                    <p class="mb-1"><a href="#" class="text-dark text-item-footer">Equipo</a></p>
+                    <p class="mb-1"><a href="#" class="text-dark text-item-footer">Contacto</a></p>
                 </div>
 
                 <!-- Servicios -->
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h6 class="text-uppercase fw-bold mb-4">Servicios</h6>
-                    <p><a href="#" class="text-dark">Desarrollo Web</a></p>
-                    <p><a href="#" class="text-dark">Aplicaciones Móviles</a></p>
-                    <p><a href="#" class="text-dark">Desarrollo Backend</a></p>
-                    <p><a href="#" class="text-dark">Consultoría</a></p>
+                    <h6 class="fw-bold mb-2 title-footer">Servicios</h6>
+                    <p class="mb-1"><a href="#" class="text-dark text-item-footer">Desarrollo Web</a></p>
+                    <p class="mb-1"><a href="#" class="text-dark text-item-footer">Aplicaciones Móviles</a></p>
+                    <p class="mb-1"><a href="#" class="text-dark text-item-footer">Desarrollo Backend</a></p>
+                    <p class="mb-1"><a href="#" class="text-dark text-item-footer">Consultoría</a></p>
                 </div>
 
                 <!-- Legal -->
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <h6 class="text-uppercase fw-bold mb-4">Legal</h6>
-                    <p><a href="#" class="text-dark">Política de Privacidad</a></p>
-                    <p><a href="#" class="text-dark">Términos y Condiciones</a></p>
-                    <p><a href="#" class="text-dark">Política de Cookies</a></p>
+                    <h6 class="fw-bold mb-2 title-footer">Legal</h6>
+                    <p class="mb-1"><a href="#" class="text-dark text-item-footer">Política de Privacidad</a></p>
+                    <p class="mb-1"><a href="#" class="text-dark text-item-footer">Términos y Condiciones</a></p>
+                    <p class="mb-1"><a href="#" class="text-dark text-item-footer">Política de Cookies</a></p>
                 </div>
             </div>
 
             <hr class="my-3">
 
             <div class="row text-center">
-                <div class="col-md-12">
+                <div class="col-md-12 footer-final">
                     <p class="mb-0">
-                        © 2025 DevSolutions. Todos los derechos reservados.
+                        © 2025 NextLink Systems. Todos los derechos reservados.
                     </p>
-                    <small>Diseñado y desarrollado con <span style="color: red;">❤</span> por DevSolutions</small>
+                    <p class="mb-0">
+                        Diseñado y desarrollado con <span style="color: red;">❤</span> por NextLink Systems
+                    </p>
                 </div>
             </div>
         </div>
