no comments part removed

--- a/index.html
+++ b/index.html
@@ -446,68 +446,11 @@
             <div class="container">
                 <div class="container container-team">
                     <div class="portfolio-content">
-                        <h1 class="portfolio-header">What our client says</h1>
+                        <h1 class="portfolio-header">Get in touch</h1>
                         <p class="portfolio-text">Conoce a los profesionales detrás de nuestras soluciones tecnológicas.
                         </p>
                     </div>
 
-                    <div class="splide" role="group" aria-label="Splide Basic HTML Example">
-                        <div class="splide__track">
-                            <ul class="splide__list">
-                                <li class="splide__slide">
-                                    <div class="card">
-                                        <div class="card-header">
-                                            Quote
-                                        </div>
-                                        <div class="card-body">
-                                            <figure>
-                                                <blockquote class="blockquote">
-                                                    <p>A well-known quote, contained in a blockquote element.</p>
-                                                </blockquote>
-                                                <figcaption class="blockquote-footer">
-                                                    Someone famous in <cite title="Source Title">Source Title</cite>
-                                                </figcaption>
-                                            </figure>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="splide__slide">
-                                    <div class="card">
-                                        <div class="card-header">
-                                            Quote
-                                        </div>
-                                        <div class="card-body">
-                                            <figure>
-                                                <blockquote class="blockquote">
-                                                    <p>A well-known quote, contained in a blockquote element.</p>
-                                                </blockquote>
-                                                <figcaption class="blockquote-footer">
-                                                    Someone famous in <cite title="Source Title">Source Title</cite>
-                                                </figcaption>
-                                            </figure>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="splide__slide">
-                                    <div class="card">
-                                        <div class="card-header">
-                                            Quote
-                                        </div>
-                                        <div class="card-body">
-                                            <figure>
-                                                <blockquote class="blockquote">
-                                                    <p>A well-known quote, contained in a blockquote element.</p>
-                                                </blockquote>
-                                                <figcaption class="blockquote-footer">
-                                                    Someone famous in <cite title="Source Title">Source Title</cite>
-                                                </figcaption>
-                                            </figure>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
 
                 </div>
             </div>
