--- a/bubbles.html
+++ b/bubbles.html
@@ -69,3 +69,61 @@
   </script>
 </body>
 </html>
+
+<!-- <div class="splide" role="group" aria-label="Splide Basic HTML Example">
+                        <div class="splide__track">
+                            <ul class="splide__list">
+                                <li class="splide__slide">
+                                    <div class="card">
+                                        <div class="card-header">
+                                            Quote
+                                        </div>
+                                        <div class="card-body">
+                                            <figure>
+                                                <blockquote class="blockquote">
+                                                    <p>A well-known quote, contained in a blockquote element.</p>
+                                                </blockquote>
+                                                <figcaption class="blockquote-footer">
+                                                    Someone famous in <cite title="Source Title">Source Title</cite>
+                                                </figcaption>
+                                            </figure>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="splide__slide">
+                                    <div class="card">
+                                        <div class="card-header">
+                                            Quote
+                                        </div>
+                                        <div class="card-body">
+                                            <figure>
+                                                <blockquote class="blockquote">
+                                                    <p>A well-known quote, contained in a blockquote element.</p>
+                                                </blockquote>
+                                                <figcaption class="blockquote-footer">
+                                                    Someone famous in <cite title="Source Title">Source Title</cite>
+                                                </figcaption>
+                                            </figure>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="splide__slide">
+                                    <div class="card">
+                                        <div class="card-header">
+                                            Quote
+                                        </div>
+                                        <div class="card-body">
+                                            <figure>
+                                                <blockquote class="blockquote">
+                                                    <p>A well-known quote, contained in a blockquote element.</p>
+                                                </blockquote>
+                                                <figcaption class="blockquote-footer">
+                                                    Someone famous in <cite title="Source Title">Source Title</cite>
+                                                </figcaption>
+                                            </figure>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div> -->
