--- a/index.html
+++ b/index.html
@@ -584,10 +584,10 @@
 
             <hr class="my-3">
 
-            <div class="row footer-info">
+            <div class="row">
                 <div class="col-md-12 footer-final">
                     <p class="mb-0">
-                        © 2025 NextLink Systems. Todos los derechos reservados.
+                        © 2025 NextLink Systems. Derechos reservados.
                     </p>
                     <p class="mb-0">
                         Diseñado y desarrollado con <span style="color: red;">❤</span> por NextLink Systems
