--- a/index.html
+++ b/index.html
@@ -465,14 +465,18 @@
                             <p class="contact-text">Completa el formulario y te responderemos a la brevedad.</p>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <label for="" class="form-label label-contact">Nombre</label>
-                                    <input type="text" id="" placeholder="Tu nombre"
-                                        class="form-control form-control-text" aria-describedby="passwordHelpBlock">
+                                    <div class="">
+                                        <label for="" class="form-label label-contact">Nombre</label>
+                                        <input type="text" id="" placeholder="Tu nombre"
+                                            class="form-control form-control-text" aria-describedby="passwordHelpBlock">
+                                    </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <label for="" class="form-label label-contact">Apellido</label>
-                                    <input type="text" id="" placeholder="Tu apellido"
-                                        class="form-control form-control-text" aria-describedby="passwordHelpBlock">
+                                    <div class="mt-3">
+                                        <label for="" class="form-label label-contact">Apellido</label>
+                                        <input type="text" id="" placeholder="Tu apellido"
+                                            class="form-control form-control-text" aria-describedby="passwordHelpBlock">
+                                    </div>
                                 </div>
                                 <div class="mb-1 mt-3">
                                     <label for="" class="form-label label-contact">Correo electrónico</label>
@@ -545,7 +549,8 @@
                     <h5 class="text-uppercase mb-4 font-weight-bold">
                         <img src="./src/img/logo.png" alt="NextLink Systems" width="150" class="me-2">
                     </h5>
-                    <p class="text-footer">Creamos soluciones tecnológicas innovadoras que impulsan el crecimiento de tu negocio en el mundo digital.</p>
+                    <p class="text-footer">Creamos soluciones tecnológicas innovadoras que impulsan el crecimiento de tu
+                        negocio en el mundo digital.</p>
                     <div class="mt-3">
                         <i class="bi bi-instagram"></i>
                         <i class="bi bi-facebook"></i>
