--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+    <link rel="shortcut icon" href="./src/img/icon.PNG" type="image/x-icon">
 </head>
 
 <body>
@@ -45,21 +46,21 @@
                                         <a class="nav-link active" aria-current="page" href="#">HOME</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">SOLUTIONS</a>
+                                        <a class="nav-link" href="#">SOLUCIONES</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">PRICING</a>
+                                        <a class="nav-link" href="#">PROYECTOS</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">ABOUT US</a>
+                                        <a class="nav-link" href="#">SOBRE NOSOTROS</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">CONTACT</a>
+                                        <a class="nav-link" href="#">CONTÁCTO</a>
                                     </li>
                                 </ul>
                                 <span class="navbar-text">
-                                    <button class="btn-login">Login</button>
-                                    <button class="btn-demo">Book a demo</button>
+                                    <button class="btn-login">Inicio Sesión</button>
+                                    <button class="btn-demo">Solicitar demo</button>
                                 </span>
                             </div>
                         </div>
@@ -69,22 +70,22 @@
                 <div class="add">
                     <div class="add-info">
                         <img src="./src/img/inflamable.png" class="add-info-img" alt="">
-                        <h6 class="add-text">GET IN TOUCH</h6>
+                        <h6 class="add-text">CONTÁCTANOS</h6>
                     </div>
                 </div>
 
                 <div class="cover-letter">
-                    <h3 class="cover-letter-text conver-text">Unlocking Starup Growing with </h3>
+                    <h3 class="cover-letter-text conver-text">Impulsando el crecimiento de las startups con</h3>
                     <h3 class="cover-letter-text">Next Link Systems</h3>
                 </div>
                 <div class="slogan">
-                    <p>Power your campaigns and turn more ad clicks into customers with personalized landing pages that
-                        are easy to build, deploy, optimize, and scale — all in one place.</p>
+                    <p>Impulsa tus campañas y convierte más clics en anuncios en clientes con páginas de destino 
+                        personalizadas que son fáciles de crear, implementar, optimizar y escalar, todo en un solo lugar..</p>
                 </div>
                 <div class="demos">
                     <div class="options-demo">
-                        <button class="get-started">Get Started</button>
-                        <button class="get-demo">Book a demo</button>
+                        <button class="get-started">Empecemos</button>
+                        <button class="get-demo">Solicitar demo</button>
                     </div>
                 </div>
 
@@ -99,7 +100,7 @@
     <div class="portfolio">
         <div class="container">
             <div class="portfolio-content">
-                <h1 class="portfolio-header">Our Portfolio</h1>
+                <h1 class="portfolio-header">Portafolio</h1>
                 <p class="portfolio-text">Descubre algunos de nuestros proyectos más destacados y las soluciones que
                     hemos <br>
                     desarrollado para nuestros clientes.</p>
@@ -213,7 +214,7 @@
     <div class="content-service">
         <div class="container">
             <div class="portfolio-content">
-                <h1 class="portfolio-header">Services</h1>
+                <h1 class="portfolio-header">Servicios</h1>
                 <p class="portfolio-text">Descubre algunos de nuestros proyectos más destacados y las soluciones que
                     hemos <br>
                     desarrollado para nuestros clientes.</p>
@@ -224,7 +225,7 @@
                         <div class="card">
                             <div class="card-body" id="service-icon">
                                 <i class='bx bx-globe-alt'></i>
-                                <h2 class="services-title">Web Design</h2>
+                                <h2 class="services-title">Diseño Web</h2>
                                 <p class="service-text">Creamos sitios web y aplicaciones web personalizadas,
                                     optimizadas para rendimiento y experiencia de usuario.</p>
                             </div>
@@ -234,7 +235,7 @@
                         <div class="card">
                             <div class="card-body" id="service-icon">
                                 <i class='bx  bx-mobile'></i>
-                                <h2 class="services-title">Mobile App</h2>
+                                <h2 class="services-title">Desarrollo Móbil</h2>
                                 <p class="service-text">Creamos sitios web y aplicaciones web personalizadas,
                                     optimizadas para rendimiento y experiencia de usuario.</p>
                             </div>
@@ -244,7 +245,7 @@
                         <div class="card">
                             <div class="card-body" id="service-icon">
                                 <i class='bx  bx-code-alt'></i>
-                                <h2 class="services-title">Back End Development</h2>
+                                <h2 class="services-title">Desarrollo Back End</h2>
                                 <p class="service-text">Creamos sitios web y aplicaciones web personalizadas,
                                     optimizadas para rendimiento y experiencia de usuario.</p>
                             </div>
@@ -288,7 +289,7 @@
     <div class="our-team">
         <div class="container container-team">
             <div class="portfolio-content">
-                <h1 class="portfolio-header">Our Team</h1>
+                <h1 class="portfolio-header">Nuestro Equipo</h1>
                 <p class="portfolio-text">Conoce a los profesionales detrás de nuestras soluciones tecnológicas.</p>
             </div>
 
@@ -452,7 +453,7 @@
     </div>
     <div class="container contact">
         <div class="contact-content">
-            <h1 class="portfolio-header">Get in touch</h1>
+            <h1 class="portfolio-header">Contáctanos</h1>
             <p class="portfolio-text">¿Tienes un proyecto en mente? Estamos aquí para ayudarte a hacerlo
                 realidad.</p>
         </div>
@@ -465,7 +466,7 @@
                             <p class="contact-text">Completa el formulario y te responderemos a la brevedad.</p>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <div class="">
+                                    <div class="mt-3">
                                         <label for="" class="form-label label-contact">Nombre</label>
                                         <input type="text" id="" placeholder="Tu nombre"
                                             class="form-control form-control-text" aria-describedby="passwordHelpBlock">
