--- a/index.html
+++ b/index.html
@@ -21,10 +21,19 @@
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-    <link rel="shortcut icon" href="./src/img/icon.PNG" type="image/x-icon">
+    <link rel="shortcut icon" href="../src/img/icon.PNG" type="image/x-icon">
 </head>
 
 <body>
+
+    <div class="splash-screen" id="splash">
+        <img class="splash-logo"
+            src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExNDBiMzY2YnU1cTVtdGN1b2VxcGh0Z3BuMm5lZWYycWxwZThrempnYyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3oEjI6SIIHBdRxXI40/giphy.gif"
+            alt="logo">
+    </div>
+
+    <div id="main">
+    </div>
 
     <div class="contenido">
         <div class="container">
@@ -59,8 +68,9 @@
                                     </li>
                                 </ul>
                                 <span class="navbar-text">
-                                    <button class="btn-login">Inicio Sesión</button>
-                                    <button class="btn-demo">Solicitar demo</button>
+                                    <a href="./views/req_demo.html" class="demo-btn">
+                                        <button class="btn-demo">Solicitar demo</button>
+                                    </a>
                                 </span>
                             </div>
                         </div>
@@ -79,8 +89,9 @@
                     <h3 class="cover-letter-text">Next Link Systems</h3>
                 </div>
                 <div class="slogan">
-                    <p>Impulsa tus campañas y convierte más clics en anuncios en clientes con páginas de destino 
-                        personalizadas que son fáciles de crear, implementar, optimizar y escalar, todo en un solo lugar..</p>
+                    <p>Impulsa tus campañas y convierte más clics en anuncios en clientes con páginas de destino
+                        personalizadas que son fáciles de crear, implementar, optimizar y escalar, todo en un solo
+                        lugar..</p>
                 </div>
                 <div class="demos">
                     <div class="options-demo">
@@ -602,6 +613,32 @@
             </div>
         </div>
     </footer>
+
+    <script src="./js/effects.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            document.querySelectorAll('.portfolio-header, .portfolio-text, .project-card .card, .col-services .card, .col-team .card, .contact-content, .data-form, .info').forEach(el => {
+                el.classList.add('fade-in');
+            });
+        });
+    </script>
+    <script>
+        window.addEventListener("load", () => {
+            const splash = document.getElementById("splash");
+            const main = document.getElementById("main");
+
+            // Mostrar splash durante 2 segundos antes del fade
+            setTimeout(() => {
+                splash.classList.add("fade-out");
+
+                splash.addEventListener("transitionend", () => {
+                    splash.style.display = "none";
+                    main.style.display = "block";
+                    document.body.style.overflow = "auto"; // Permitir scroll
+                });
+            }, 800);
+        });
+    </script>
 
     <script type="importmap">
         {
